# wq_sat

./: README.md  requirements.txt  setup.cfg  setup.py
wq_sat/: credentials.yaml
wq_sat/.ipynb_checkpoints/: credentials-checkpoint.yaml
wq_sat/satellites/: gdal_utils.py
wq_sat/satellites/.ipynb_checkpoints/: landsat-checkpoint.py  landsat_download-checkpoint.py  sentinel-checkpoint.py  sentinel_download-checkpoint.py
wq_sat/satsr/: fusion.py  utils.py
wq_sat/satsr/.ipynb_checkpoints/: algorithms-checkpoint.py  quality_coeffs-checkpoint.py
wq_sat/utils/: gdal_utils.py
wq_sat/utils/.ipynb_checkpoints/: config-checkpoint.py
