[metadata]
name = wq_sat
summary = Service to monitor the water quality of the continental water bodies through satellite data
description-file = 
    README.md
author = Daniel Garcia Diaz (IFCA / CSIC)
author-email = garciad@ifca.unican.es
version = 0.0.1
license = MIT
home-page = https://github.com/garciadd/wq_sat.git
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6

[files]
packages =
    wq_sat